added node engine ^ 6.1.0 to package.json to fix ES2015 syntax issues on Heroku

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "posttest": "echo Finished running tests!!",
     "test-watch": "nodemon test/test"
   },
+  "engines": {
+    "node": "^6.1.0"
+  }
   "keywords": [],
   "author": "Jazz Lyles <ripley36706@gmail.com> (https://github.com/existenzial)",
   "license": "ISC",
