--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node --presets es2015 teachbot",
+    "start": "node index",
     "dev": "nodemon index",
     "pretest": "echo Starting tests!!",
     "test": "node test/test",
@@ -18,7 +18,6 @@
   "author": "Jazz Lyles <ripley36706@gmail.com> (https://github.com/existenzial)",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "body-parser": "^1.15.2",
